<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">educa Teacher</string>
    <string name="student_home_activity">Student - Home</string>
    <string name="teacher_home_activity">Teacher - Home</string>
    <string name="choose_model_activity">Choose Model</string>
    <string name="match_exercise_activity">Match Exercise</string>
    <string name="complete_exercise_activity">Complete Exercise</string>
    <string name="action_new_exercise">New Exercise</string>
    <string name="action_new_folder">New folder</string>
    <string name="student">I\'m a Student</string>
    <string name="teacher">I\'m a Teacher</string>
    <string name="match">Match</string>
    <string name="image_match">ImageMatch</string>
    <string name="image_num_match">NumeroMatch</string>
    <string name="numero">Quantidade</string>
    <string name="color_match">Color Match</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="multiple_correct">Multiple Correct</string>
    <string name="complete">Complete</string>
    <string name="image">Imagens</string>
    <string name="calligraphy">Calligraphy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="required">Required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="duplicated">Duplicated</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="answer">Answer</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="congratulations_alert_title">Congratulations!</string>
    <string name="congratulations_alert_message">You are right!</string>
    <string name="fail_alert_title">You are wrong!</string>
    <string name="fail_alert_message">Let\'s try again?</string>
    <string name="edit_alert_title">Edit Exercise</string>
    <string name="delete_alert_title">Delete Exercise</string>
    <string name="edit_alert_message">Are you sure you want to edit this Exercise?</string>
    <string name="delete_alert_message">Are you sure you want to delete this Exercise?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="status_new">New</string>
    <string name="status_answered">Answered</string>
    <string name="status_submitted">Submitted</string>
    <string name="correction_not_rated">Not Rated</string>
    <string name="correction_right">Right Answer</string>
    <string name="correction_wrong">Wrong Answer</string>
    <string name="created_exercises">Created Exercises</string>
    <string name="my_exercises">My Exercises</string>
    <string name="choose_the_right_answer">Choose the right answer</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="exercise_name_already_exists">Exercise name already exists. Choose other name</string>
    <string name="need_to_choose_letter">Need to choose at least one letter</string>
    <string name="developers">Developers</string>
    <string name="fragment_help_1">Match colors to their names.</string>
    <string name="fragment_help_2">Complete the word with the hidden letters.</string>
    <string name="fragment_help_3">Choose the correct alternative.</string>
    <string name="question">Question</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="send">Send</string>
    <string name="send_alert_title">Send Exercise</string>
    <string name="send_alert_message">Do you want to send the Exercise?</string>
    <string name="fileSent">Exercise sent!</string>
    <string name="ErrorSend">Error sending the file.</string>
    <string name="choose_a_image">Escolha a imagem</string>
    <string name="choose_a_numero">Escolha o numero</string>
    <string name="new_class_hotspot">Start Class</string>
    <string name="new_class">New Class</string>
    <string name="name">Class name</string>
    <string name="password">Class password</string>
    <string name="error_password">8 to 16 characters</string>
    <string name="quit">quit</string>
    <string name="chat">chat</string>
    <string name="confirmation_send">Are you sure you want to send the exercise?</string>
    <string name="sending">Sending...</string>
    <string name="login">Email</string>
    <string name="login_password">Password</string>
    <string name="new_user">Add User</string>
    <string name="error_new_user">This user already exists</string>
	<string name="name_new_user">Name</string>
	<string name="login_incorrect">You are not a professor!</string>
	<string name="password_incorrect">Incorrect password</string>
	<string name="no_users">There are registered users. Would you like to register now?</string>
	<string name="report">Report</string>
	<string name="name_aluno">Student</string>
	<string name="hits">Hits</string>
	<string name="faults">Faults</string>
	<string name="total">Total</string>
	<string name="sync_with_web">Sync</string>
	
	<string name="sync_init">Starting...</string>
	<string name="sync_no_net">Without internet!</string>
	<string name="sync_error">Error</string>
	<string name="sync_activities">Adding activities, wait!</string>
	<string name="new_folder">New folder</string>
	<string name="new_folder_hint">Folder name</string>
	<string name="confirmation_folder_delete">The entire contents of the folder will be deleted. Continue?</string>
	<string name="confirmation_folder_delete_default">Only contents of the folder will be deleted. Continue?</string>
	<string name="about_desc">\t\t\tNo contexto da educação infantil, as ferramentas educativas precisam ser desenvolvidas para,
		não somente atrair a atenção da criança e a divertir, mas contribuir com sua formação educacional.\n\t\t\tPensando nisso, desenvolvemos o
		Educa: um aplicativo para auxílio ao professor na elaboração de atividades a partir de templates com
		conteúdo pré-definido.\n\n\t\t\tEste projeto vem sendo desenvolvido a algum tempo e por isso não poderíamos esquecer de todos que ajudaram
		o Educa a caminhar:\n\n\tJonhnanthan Victor Pereira Oliveira\n\tLeonardo Alves dos Santos\n\tLuis Henrique da Silva II
		\n\tAna Lúcia Tonel da Silva\n\tDiego Tavares Pereira\n\tJúlio Andherson de Oliveira Silva\n\tRodolfo de Lima Viana\n\n\t\t\tTodos, alunos
		do curso de Ciência da Computação da Universidade Federal de Campina Grande.
		</string>
</resources>