<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/bg_home"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.educa.activity.MainActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/name_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_et"
        android:hint="@string/name_new_user"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="#777777"
        android:textColorHint="#AAAAAA"
        android:textCursorDrawable="@drawable/cursor" />
    
    <EditText
        android:id="@+id/login_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_et"
        android:hint="@string/login"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="#777777"
        android:textColorHint="#AAAAAA"
        android:textCursorDrawable="@drawable/cursor" />
    
    <EditText
        android:id="@+id/password_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_et"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="#777777"
        android:textColorHint="#AAAAAA"
        android:textCursorDrawable="@drawable/cursor" />
    
    <ImageButton
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/teacher"
        android:src="@drawable/selector_bt_main" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="-64dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/new_user"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

</LinearLayout>